--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapi-template-ts",
+  "name": "heatmap",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -15,8 +15,8 @@
     "build": "tsc",
     "build:watch": "tsc --watch --sourceMap",
     "build:start": "npm run build && node dist/index.js",
-    "docker:test": "mkdir -p test-output 2>/dev/null || true && docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts",
-    "docker:test:watch": "docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts"
+    "docker:test": "mkdir -p test-output 2>/dev/null || true && docker compose -p heatmap-test down -v && docker compose -f compose.yaml -f compose.test.yaml -p heatmap-test run --build --rm heatmap",
+    "docker:test:watch": "docker compose -p heatmap-test down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml -p heatmap-test run --build --rm heatmap"
   },
   "author": "John Watson",
   "license": "MIT",
