--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,9 +1,9 @@
 services:
-  hapi-template-ts:
+  heatmap:
     build:
       target: development
-    image: hapi-template-ts-development
-    container_name: hapi-template-ts-development
+    image: heatmap-development
+    container_name: heatmap-development
     ports:
       - "3000:3000"
       - "9229:9229"
@@ -11,9 +11,9 @@ services:
       - ./src:/home/node/src
       - ./package.json:/home/node/package.json
     networks:
-      - hapi-template-ts
+      - heatmap
 
 networks:
-  hapi-template-ts:
+  heatmap:
     driver: bridge
-    name: hapi-template-ts
+    name: heatmap
