--- a/helm/hapi-template-ts/templates/cluster-ip-service.yaml
+++ b/helm/hapi-template-ts/templates/cluster-ip-service.yaml
@@ -1,3 +1,3 @@
-{{- include "helm-library.cluster-ip-service" (list . "hapi-template-ts.cluster-ip-service") -}}
-{{- define "hapi-template-ts.cluster-ip-service" -}}
+{{- include "helm-library.cluster-ip-service" (list . "heatmap.cluster-ip-service") -}}
+{{- define "heatmap.cluster-ip-service" -}}
 {{- end -}}
