--- a/helm/hapi-template-ts/templates/deployment.yaml
+++ b/helm/hapi-template-ts/templates/deployment.yaml
@@ -1,3 +1,3 @@
-{{- include "helm-library.deployment" (list . "hapi-template-ts.deployment") -}}
-{{- define "hapi-template-ts.deployment" -}}
+{{- include "helm-library.deployment" (list . "heatmap.deployment") -}}
+{{- define "heatmap.deployment" -}}
 {{- end -}}
