--- a/helm/hapi-template-ts/templates/ingress.yaml
+++ b/helm/hapi-template-ts/templates/ingress.yaml
@@ -1,3 +1,3 @@
-{{- include "helm-library.ingress" (list . "hapi-template-ts.ingress") -}}
-{{- define "hapi-template-ts.ingress" -}}
+{{- include "helm-library.ingress" (list . "heatmap.ingress") -}}
+{{- define "heatmap.ingress" -}}
 {{- end -}}
