--- a/helm/hapi-template-ts/templates/secret.yaml
+++ b/helm/hapi-template-ts/templates/secret.yaml
@@ -1,5 +1,5 @@
-{{- include "helm-library.secret" (list . "hapi-template-ts.secret") -}}
-{{- define "hapi-template-ts.secret" -}}
+{{- include "helm-library.secret" (list . "heatmap.secret") -}}
+{{- define "heatmap.secret" -}}
 stringData:
   API_KEY: {{ .Values.secret.apiKey | quote }}
 {{- end -}}
