--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@hapi/bell": "13.1.0",
     "@hapi/boom": "10.0.1",
+    "@hapi/catbox-redis": "7.0.2",
+    "@hapi/cookie": "12.0.1",
     "@hapi/crumb": "9.0.1",
     "@hapi/hapi": "21.3.10",
     "@hapi/inert": "7.1.0",
+    "@hapi/jwt": "3.2.3",
     "@hapi/scooter": "7.0.0",
     "@hapi/vision": "7.0.3",
+    "@hapi/wreck": "18.1.0",
+    "@hapi/yar": "11.0.3",
     "blankie": "5.0.0",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
@@ -49,13 +55,19 @@
     "@types/joi": "17.2.2",
     "@types/node": "22.13.10",
     "@types/nunjucks": "3.2.6",
+    "@types/hapi__bell": "11.0.7",
+    "@types/hapi__catbox-redis": "5.0.10",
+    "@types/hapi__cookie": "12.0.5",
+    "@types/hapi__jwt": "2.0.5",
+    "@types/hapi__wreck": "15.0.1",
+    "@types/hapi__yar": "10.1.6",
+    "@vitest/coverage-v8": "4.0.15",
     "blipp": "4.0.2",
     "eslint": "9.39.1",
     "neostandard": "0.11.4",
     "nodemon": "3.1.4",
     "npm-run-all": "4.1.5",
-    "vitest": "4.0.15",
-    "@vitest/coverage-v8": "4.0.15"
+    "vitest": "4.0.15"
   },
   "overrides": {
     "tmp": "0.2.5"
